# suoraflow

./: .env.example  .gitignore  CLAUDE.md  KICKOFF_PROMPT.md  README.md  docker-compose.yml
.claude/agents/: coder.md  debugger.md  qa-tester.md  reviewer.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/routes/: health.py
backend/app/services/: rough_cut_service.py  visual_search_service.py
backend/app/utils/: ffmpeg.py  file_validation.py  security.py
backend/app/workers/: queue.py  tasks.py
backend/tests/: test_health.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: health.spec.ts
frontend/src/: App.tsx
frontend/src/components/: placeholder.ts
frontend/src/lib/: placeholder.ts
frontend/src/pages/: placeholder.ts
scripts/: init_db.py  seed_demo.py  warm_models.py
worker/: worker.py
