[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suoraflow-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlmodel==0.0.22",
    "psycopg[binary]==3.2.3",
    "pgvector==0.3.6",
    "redis==5.2.0",
    "rq==2.0.0",
    "faster-whisper==1.1.0",
    "sentence-transformers==3.3.1",
    "python-multipart==0.0.18",
    "pydantic-settings==2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "pytest-asyncio==0.24.0",
]
# pyannote is gated on HF_TOKEN; install manually when token is available
diarization = [
    "pyannote.audio==3.3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
cache_dir = "/tmp/.pytest_cache"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
